--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,16 @@
 		<param-value>/WEB-INF/beans.xml</param-value>
 	</context-param>
 	
+	<filter>
+    <filter-name>CorsFilter</filter-name>
+    <filter-class>com.revature.controllers.CORSFilter</filter-class>
+  </filter>
+ 
+  <filter-mapping>
+    <filter-name>CorsFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+	
 	<servlet>
 		<servlet-name>MasterServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
