--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
   				<artifactId>platform-bom</artifactId>
   				<version>4.2.5.RELEASE</version>
 				<scope>import</scope>
+				<type>pom</type>
   			</dependency>
   		</dependencies>
   	</dependencyManagement>
